Окончательные изменения ОСЩ. (#318)

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -62,10 +62,10 @@
       - id: Handcuffs
       - id: Flash
       - id: BoxCardboardTrackImp
-      - id: ClothingBeltSecurityWebbing
       - id: GarmentBagBlueShield
       - id: ClothingHeadsetAltBlueShield
       - id: ClothingHeadsetBlueShield
+      - id: WoodenMedalCase
 
 - type: entity
   id: LockerCaptainFilled
