--- a/Resources/Prototypes/Entities/Objects/Misc/garment.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/garment.yml
@@ -39,8 +39,8 @@
       - id: ClothingUniformJumpskirtBlueshieldTurtleneck
       - id: ClothingEyesGlassesSunglassesBlueShield
       - id: ClothingOuterWinterBS
+      - id: ClothingHeadHatBeretBS
       - id: ClothingNeckMantleBS
-      - id: ClothingNeckCloakBlueshield
 
 - type: entity
   name: captain's garment bag
