--- a/Resources/Prototypes/Entities/Objects/Misc/medalcase.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/medalcase.yml
@@ -23,3 +23,30 @@
     - id: ClothingNeckSciencemedal
     - id: ClothingNeckSecuritymedal
     - id: ClothingNeckClownmedal
+
+- type: entity
+  id: WoodenMedalCase
+  name: wooden medal case
+  description: An antique wooden case for storing things that are dear to you.
+  parent: [ BaseStorageItem, BaseBagOpenClose ]
+  components:
+  - type: Sprite
+    sprite: Objects/Storage/medalcase.rsi
+    state: icon_wooden
+    layers:
+    - state: icon_wooden
+    - state: icon_woodenOpen
+      map: ["openLayer"]
+      visible: false
+  - type: Item
+    sprite: Objects/Storage/medalcase.rsi
+    size: Normal
+  - type: Storage
+    maxSlots: 5
+    maxTotalWeight: 10
+  - type: StorageFill
+    contents:
+    - id: ClothingNeckBlueshieldMedal
+    - id: ClothingNeckGoldShieldMedal
+    - id: ClothingNeckSilverShieldMedal
+    - id: ClothingNeckBronzeShieldMedal
