--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -566,6 +566,7 @@
         Heat: 0.4
         Radiation: 0.20
         Caustic: 0.5
+        Stun: 0.65
   - type: ClothingSpeedModifier
     walkModifier: 1.0
     sprintModifier: 1.0
@@ -627,6 +628,7 @@
         Heat: 0.2
         Radiation: 0.20
         Caustic: 0.5
+        Stun: 0.45
   - type: ClothingSpeedModifier
     walkModifier: 1.0
     sprintModifier: 1.0
@@ -672,6 +674,7 @@
         Heat: 0.3
         Radiation: 0.20
         Caustic: 0.2
+        Stun: 0.45
   - type: ClothingSpeedModifier
     walkModifier: 1.0
     sprintModifier: 1.0
@@ -717,6 +720,7 @@
         Heat: 0.2
         Radiation: 0.2
         Caustic: 0.2
+        Stun: 0.75
   - type: ClothingSpeedModifier
     walkModifier: 0.9
     sprintModifier: 0.65
