--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/pickaxe.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/pickaxe.yml
@@ -14,16 +14,16 @@
   - type: MeleeWeapon
     wideAnimationRotation: -135
     damage:
+      groups:
+        Brute: 5
       types:
-        Blunt: 2.5
-        Piercing: 2.5
         Structural: 10
   - type: Wieldable
   - type: IncreaseDamageOnWield
     damage:
+      groups:
+        Brute: 10
       types:
-        Blunt: 5
-        Piercing: 5
         Structural: 10
   - type: Item
     size: Normal
@@ -47,7 +47,7 @@
   - type: MeleeWeapon
     attackRate: 1.5
     damage:
+      groups:
+        Brute: 10
       types:
-        Blunt: 5
-        Piercing: 5
         Structural: 10
