--- a/Resources/Prototypes/Catalog/Fills/Boxes/ammunition.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/ammunition.yml
@@ -275,7 +275,8 @@
   abstract: true
   components:
   - type: Storage
-    maxTotalWeight: 12
+    grid:
+    - 0,0,3,2
     quickInsert: true
     areaInsert: true
     whitelist:
@@ -441,7 +442,8 @@
   description: A box full of syringe cartridges.
   components:
   - type: Storage
-    maxTotalWeight: 10
+    grid:
+    - 0,0,3,2
   - type: StorageFill
     contents:
       - id: Syringecartridge
