--- a/Resources/Prototypes/Entities/Objects/Misc/medalcase.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/medalcase.yml
@@ -42,8 +42,8 @@
     sprite: Objects/Storage/medalcase.rsi
     size: Normal
   - type: Storage
-    maxSlots: 5
-    maxTotalWeight: 10
+    grid:
+    - 0,0,3,1
   - type: StorageFill
     contents:
     - id: ClothingNeckBlueshieldMedal
