--- a/Resources/Prototypes/Entities/Clothing/Belt/quiver.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/quiver.yml
@@ -27,12 +27,11 @@
   parent: ClothingBeltQuiver
   id: ClothingBeltQuiverComposit
   name: quiver
-  description: Can hold up to 40 arrows, and fits snug around your waist.
+  description: Can hold up to 24 arrows, and fits snug around your waist.
   components:
-  - type: Item
-    size: Huge
   - type: Storage
-    maxSlots: 40
+    grid:
+    - 0,0,11,3
     whitelist:
       tags:
       - ArrowBaseCompound
