--- a/Resources/Prototypes/Entities/Objects/Misc/briefcases.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/briefcases.yml
@@ -7,8 +7,9 @@
   - type: Item
     size: Ginormous
   - type: Storage
+    maxItemSize: Huge
     grid:
-    - 0,0,5,3
+    - 0,0,7,4
   - type: Tag
     tags:
     - Briefcase
