--- a/Resources/Prototypes/Entities/Clothing/Belt/quiver.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/quiver.yml
@@ -11,6 +11,10 @@
     - map: [ "enum.StorageContainerVisualLayers.Fill" ]
       visible: false
   - type: Clothing
+  - type: Item
+    size: Huge
+    shape:
+    - 0,0,3,4
   - type: Storage
     grid:
     - 0,0,7,3
