--- a/Resources/Prototypes/Maps/bagel.yml
+++ b/Resources/Prototypes/Maps/bagel.yml
@@ -66,4 +66,4 @@
             Reporter: [ 2, 2 ]
             #centcom      
             BlueShield: [ 1, 1 ]
-            CentComConsultant: [ 1, 1 ]
+            #CentComConsultant: [ 1, 1 ]
