--- a/Resources/Prototypes/Maps/marathon.yml
+++ b/Resources/Prototypes/Maps/marathon.yml
@@ -66,4 +66,4 @@
             Musician: [ 1, 1 ]
             #centcom      
             BlueShield: [ 1, 1 ]
-            CentComConsultant: [ 1, 1 ]
+            #CentComConsultant: [ 1, 1 ]
