--- a/Resources/Prototypes/Maps/metastation.yml
+++ b/Resources/Prototypes/Maps/metastation.yml
@@ -65,4 +65,4 @@
            Borg: [ 1, 2 ]
         #Centcom      
            BlueShield: [ 1, 1 ]
-           CentComConsultant: [ 1, 1 ]
+           #CentComConsultant: [ 1, 1 ]
