--- a/Resources/Prototypes/Maps/omega.yml
+++ b/Resources/Prototypes/Maps/omega.yml
@@ -62,4 +62,4 @@
             Borg: [ 2, 2 ]
             #centcom      
             BlueShield: [ 1, 1 ]
-            CentComConsultant: [ 1, 1 ]
+            #CentComConsultant: [ 1, 1 ]
