--- a/Resources/Prototypes/Maps/packed.yml
+++ b/Resources/Prototypes/Maps/packed.yml
@@ -49,7 +49,7 @@
             Detective: [ 1, 1 ]
             SecurityCadet: [ 2, 2 ]
             Lawyer: [ 1, 1 ]
-            Brigmedic: [ 1, 1 ]
+            #Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 2, 2 ]
@@ -63,4 +63,4 @@
             Borg: [ 1 , 1 ]
             #centcom      
             BlueShield: [ 1, 1 ]
-            CentComConsultant: [ 1, 1 ]
+            #CentComConsultant: [ 1, 1 ]
