Preparing for a merge p1

--- a/Resources/Prototypes/Access/misc.yml
+++ b/Resources/Prototypes/Access/misc.yml
@@ -36,7 +36,7 @@
 - type: accessGroup
   id: AllAccessCentCom
   tags:
-  - Centcom
+  - CentralCommand
   - EmergencyShuttleRepealAll
   - Captain
   - HeadOfPersonnel
