--- a/Resources/Prototypes/Entities/Structures/Storage/Closets/Lockers/lockers.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Closets/Lockers/lockers.yml
@@ -73,7 +73,7 @@
     stateDoorOpen: cc_open
     stateDoorClosed: cc_door
   - type: AccessReader
-    access: [["Centcom"]]
+    access: [["CentralCommand"]]
 
 - type: entity
   id: LockerCentcomConsultant
@@ -87,7 +87,7 @@
     stateDoorOpen: ccc_open
     stateDoorClosed: ccc_door
   - type: AccessReader
-    access: [["Centcom"]]
+    access: [["CentralCommand"]]
 
 - type: entity
   id: LockerBlueShield
@@ -101,7 +101,7 @@
     stateDoorOpen: blueshield_open
     stateDoorClosed: blueshield_door
   - type: AccessReader
-    access: [["Centcom"]]
+    access: [["CentralCommand"]]
 
 # Command
 - type: entity
