--- a/Resources/Prototypes/Objectives/objectiveGroups.yml
+++ b/Resources/Prototypes/Objectives/objectiveGroups.yml
@@ -95,6 +95,7 @@
     BibleStealObjective: 1
     ClothingNeckGoldmedalStealObjective: 1              #other
     ClothingNeckClownmedalStealObjective: 0.5
+    ClothingNeckBlueshieldMedal: 0.25                   #centcom
     
 - type: weightedRandom
   id: ThiefObjectiveGroupStructure
