--- a/Resources/Prototypes/Roles/Jobs/CentCom/centcom_consultant.yml
+++ b/Resources/Prototypes/Roles/Jobs/CentCom/centcom_consultant.yml
@@ -38,8 +38,39 @@
   supervisors: job-supervisors-centcom
   canBeAntag: false
   whitelistRequired: true
-  accessGroups:
-  - AllAccessCentCom
+  access:
+  - EmergencyShuttleRepealAll
+  - Captain
+  - HeadOfPersonnel
+  - ChiefEngineer
+  - ChiefMedicalOfficer
+  - HeadOfSecurity
+  - ResearchDirector
+  - Command
+  - Security
+  - Detective
+  - Armory
+  - Brig
+  - Lawyer
+  - Engineering
+  - Medical
+  - Quartermaster
+  - Miner
+  - Salvage
+  - Cargo
+  - Research
+  - Service
+  - Maintenance
+  - External
+  - Janitor
+  - Theatre
+  - Bar
+  - Chemistry
+  - Kitchen
+  - Chapel
+  - Hydroponics
+  - Atmospherics
+  - CentralCommand
   special:
   - !type:AddImplantSpecial
     implants: [ MindShieldImplant ]
