--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -131,3 +131,19 @@ AirlockSyndicateCommand: AirlockSyndicateNukeopCommand
 AirlockSyndicateCommandLocked: AirlockSyndicateNukeopCommandLocked
 AirlockSyndicateCommandGlass: AirlockSyndicateNukeopCommandGlass
 AirlockSyndicateCommandGlassLocked: AirlockSyndicateNukeopCommandGlassLocked
+
+# 02-01-2023 Starshine
+AirlockCentcomV2: AirlockCentralCommandV2
+AirlockCentcomV2Locked: AirlockCentralCommandV2Locked
+AirlockCentcom: AirlockCentralCommand
+AirlockCentcomLocked: AirlockCentralCommandLocked
+AirlockCentcomHatch: AirlockHatchCentralCommand
+AirlockCentcomHatchLocked: AirlockHatchCentralCommandLocked
+AirlockCentcomGlass: AirlockCentralCommandGlass
+AirlockCentcomGlassLocked: AirlockCentralCommandGlassLocked
+AirlockExternalCentcomLocked: AirlockExternalCentralCommandLocked
+AirlockCentcomHatchCommandLocked: AirlockHatchCommandLocked
+AirlockExternalGlassCentcomLocked: AirlockExternalGlassCentralCommandLocked
+AirlockMaintCentcomLocked: AirlockMaintCentralCommandLocked
+AirlockCentcomCommandLocked: AirlockCentralCommandCommandLocked
+WindoorSecureCentcomLocked: WindoorSecureCentralCommandLocked
