Laugh emote for syndieborgs

--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -257,3 +257,8 @@
         - Syndicate
     - type: ShowSyndicateIcons
     - type: MovementAlwaysTouching
+    - type: Vocal
+      sounds:
+        Male: SyndieBorgEmotes
+        Female: SyndieBorgEmotes
+        Unsexed: SyndieBorgEmotes
