Fix door duplication

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -180,3 +180,4 @@ AirlockExternalGlassCentcomLocked: AirlockExternalGlassCentralCommandLocked
 AirlockMaintCentcomLocked: AirlockMaintCentralCommandLocked
 AirlockCentcomCommandLocked: AirlockCentralCommandCommandLocked
 WindoorSecureCentcomLocked: WindoorSecureCentralCommandLocked
+AirlockCommandCentralCommandGlassLocked: AirlockCentralCommandGlassLocked
