--- a/Resources/Prototypes/Guidebook/medical.yml
+++ b/Resources/Prototypes/Guidebook/medical.yml
@@ -29,7 +29,7 @@
   text: "/ServerInfo/Guidebook/Medical/Chemist.xml"
   children:
   - Medicine
-  - Botanicals
+  # - Botanicals
   - AdvancedBrute
 
 - type: guideEntry
@@ -38,11 +38,11 @@
   text: "/ServerInfo/Guidebook/Medical/Medicine.xml"
   filterEnabled: True
 
-- type: guideEntry
-  id: Botanicals
-  name: guide-entry-botanicals
-  text: "/ServerInfo/Guidebook/Medical/Botanicals.xml"
-  filterEnabled: True
+# - type: guideEntry
+  # id: Botanicals
+  # name: guide-entry-botanicals
+  # text: "/ServerInfo/Guidebook/Medical/Botanicals.xml"
+  # filterEnabled: True
 
 - type: guideEntry
   id: AdvancedBrute
