--- a/Resources/Prototypes/Guidebook/antagonist.yml
+++ b/Resources/Prototypes/Guidebook/antagonist.yml
@@ -8,7 +8,7 @@
   # - Zombies
   # - Revolutionaries
   - MinorAntagonists
-  - SpaceNinja
+  # - SpaceNinja
 
 - type: guideEntry
   id: Traitors
@@ -35,7 +35,7 @@
   name: guide-entry-minor-antagonists
   text: "/ServerInfo/Guidebook/Antagonist/MinorAntagonists.xml"
 
-- type: guideEntry
-  id: SpaceNinja
-  name: guide-entry-space-ninja
-  text: "/ServerInfo/Guidebook/Antagonist/SpaceNinja.xml"
+# - type: guideEntry
+  # id: SpaceNinja
+  # name: guide-entry-space-ninja
+  # text: "/ServerInfo/Guidebook/Antagonist/SpaceNinja.xml"
