--- a/Resources/Prototypes/Guidebook/medical.yml
+++ b/Resources/Prototypes/Guidebook/medical.yml
@@ -30,7 +30,7 @@
   children:
   - Medicine
   # - Botanicals
-  - AdvancedBrute
+  # - AdvancedBrute
 
 - type: guideEntry
   id: Medicine
@@ -44,7 +44,7 @@
   # text: "/ServerInfo/Guidebook/Medical/Botanicals.xml"
   # filterEnabled: True
 
-- type: guideEntry
-  id: AdvancedBrute
-  name: guide-entry-brute
-  text: "/ServerInfo/Guidebook/Medical/AdvancedBrute.xml"
+# - type: guideEntry
+  # id: AdvancedBrute
+  # name: guide-entry-brute
+  # text: "/ServerInfo/Guidebook/Medical/AdvancedBrute.xml"
