--- a/Resources/Prototypes/Maps/atlas.yml
+++ b/Resources/Prototypes/Maps/atlas.yml
@@ -43,7 +43,7 @@
             ResearchAssistant: [ 1, 3 ]
             Borg: [ 2, 2 ]
             #security
-            BlueShield: [1, 1]
+            #BlueShield: [1, 1]
             HeadOfSecurity: [ 1, 1 ]
             Warden: [ 1, 1 ]
             SecurityOfficer: [ 3, 3 ]
@@ -51,7 +51,7 @@
             Detective: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
-            Miner: [ 2,2 ]
+            #Miner: [ 2,2 ]
             SalvageSpecialist: [ 2, 2 ]
             CargoTechnician: [ 2, 2 ]
             #civillian
