--- a/Resources/Prototypes/Maps/omega.yml
+++ b/Resources/Prototypes/Maps/omega.yml
@@ -50,12 +50,12 @@
             Detective: [ 1, 1 ]
             SecurityCadet: [ 2, 2 ]
             Lawyer: [ 1, 1 ]
-            Brigmedic: [ 1, 1 ]
+            #Brigmedic: [ 1, 1 ]
             #supply
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 2, 2 ]
             CargoTechnician: [ 2, 2 ]
-            Miner: [ 3,3 ]
+            #Miner: [ 3,3 ]
             #civilian
             Passenger: [ -1, -1 ]
             Clown: [ 1, 1 ]
@@ -63,5 +63,5 @@
             Musician: [ 1, 1 ]
             Borg: [ 2, 2 ]
             #centcom      
-            BlueShield: [ 1, 1 ]
+            #BlueShield: [ 1, 1 ]
             #CentComConsultant: [ 1, 1 ]
