--- a/Resources/Prototypes/Maps/packed.yml
+++ b/Resources/Prototypes/Maps/packed.yml
@@ -54,7 +54,7 @@
             Quartermaster: [ 1, 1 ]
             SalvageSpecialist: [ 2, 2 ]
             CargoTechnician: [ 2, 2 ]
-            Miner: [ 3,3 ]
+            #Miner: [ 3,3 ]
             #civilian
             Passenger: [ -1, -1 ]
             Clown: [ 1, 1 ]
@@ -62,5 +62,5 @@
             Musician: [ 1, 1 ]
             Borg: [ 1 , 1 ]
             #centcom      
-            BlueShield: [ 1, 1 ]
+            #BlueShield: [ 1, 1 ]
             #CentComConsultant: [ 1, 1 ]
